--- a/LicGen/package.json
+++ b/LicGen/package.json
@@ -46,5 +46,5 @@
   "devDependencies": {
     "gh-pages": "^6.2.0"
   },
-  "homepage": "https://gpsmartapps.github.io/LicGen"
+  "homepage": "https://gpsmartapps.github.io/LicGen/"
 }
